# Mumbai-Tech-Hub

./: .env.example  .gitignore  LICENSE  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  admin.py  alerts.py  auth.py  billing.py  compliance.py  content.py  health.py  market.py  portfolio.py  signals.py  users.py
backend/app/core/: config.py  events.py  logging.py  rate_limit.py  redis.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/db/alembic/: env.py
backend/app/db/crud/: alert.py  audit.py  base.py  portfolio.py  user.py
backend/app/db/init/: __init__.py
backend/app/db/models/: __init__.py  alert.py  audit.py  notification.py  portfolio.py  subscription.py  user.py
backend/app/db/schemas/: __init__.py  alert.py  auth.py  billing.py  compliance.py  market.py  portfolio.py  signals.py  user.py
backend/app/services/ai/: __init__.py  backtest.py  signals.py
backend/app/services/alerts/: __init__.py  service.py
backend/app/services/auth/: email.py  totp.py
backend/app/services/calendar/: __init__.py  service.py
backend/app/services/news/: __init__.py  service.py
backend/app/services/portfolio/: __init__.py  service.py
backend/app/services/pricing/: __init__.py  service.py
backend/app/services/pricing/providers/: __init__.py  alphavantage.py  binance.py  dev.py
backend/app/tests/: conftest.py  test_auth.py  test_market.py
backend/app/workers/: alerts_worker.py
backend/app/ws/: __init__.py  price.py
(+36 files in other folders)
